--- a/src/pages/Detail/ProphetDetail.css
+++ b/src/pages/Detail/ProphetDetail.css
@@ -1,3 +1,34 @@
+.Detail .ProphetCard {
+   max-width: 280px;
+   max-height: 430px;
+}
+
+.Detail .ProphetCard img {
+   max-height: 180px;
+}
+
+@media screen and (min-width: 750px) {
+   .Detail .ProphetCard {
+      max-height: 250px;
+      max-width: none;
+   }
+   .Detail .ProphetCard img {
+      max-height: none;
+   }
+}
+
+@media screen and (min-width: 1100px) {
+   .Detail .ProphetCard {
+      max-height: 235px;
+   }
+}
+
+@media screen and (min-width: 1400px) {
+   .Detail .ProphetCard {
+      max-height: 200px;
+   }
+}
+
 .Detail .PredictionStrip {
    margin-top: 30px;
 }
@@ -22,5 +53,3 @@
       justify-content: center;
    }
 }
-
-
